# governance2-testnet

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
.github/workflows/: build-and-publish.yml  check.yml  deploy-testnet.yml
core-primitives/: Cargo.toml
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  command_helper.rs  rpc.rs  service.rs
primitives/: Cargo.toml
runtime/: Cargo.toml
runtime/common/: Cargo.toml
runtime/common/src/: lib.rs  xcm_sender.rs
runtime/parachains/src/: origin.rs
runtime/src/: bag_thresholds.rs  lib.rs
runtime/src/governance/: fellowship.rs  mod.rs  origins.rs  tracks.rs
runtime/src/weights/: mod.rs  pallet_democracy.rs  pallet_scheduler.rs
scripts/: start-testnet.sh
